archive/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: arc-app
    app.kubernetes.io/component: arc-app
    app.kubernetes.io/instance: arc-app
    app.kubernetes.io/part-of: arc
  name: arc-app
spec:
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: ""
    name: arc-app
    weight: null
status: {}
